<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/holderCabezeraConfiguracionCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/iconoConfiguracionCuenta"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            app:srcCompat="@drawable/ic_baseline_security_24"
            tools:tint="@color/color_texto_boton" />

        <TextView
            android:id="@+id/tituloConfiguracionCuenta"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_toEndOf="@+id/iconoConfiguracionCuenta"
            android:gravity="center|start"
            android:text="@string/titulo_configuracion_interfaz"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/holderCabezeraConfiguracionCuenta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_cambiar_estado" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCambioEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/hint_estado"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/botonCambioEstado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/descripcion_login"
                android:foregroundGravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_check_circle_24"
                tools:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_cambiar_username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCambioUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/username"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/botonCambioUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/descripcion_login"
                android:foregroundGravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_check_circle_24"
                tools:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_cambiar_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCambioEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/botonCambioEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/descripcion_login"
                android:foregroundGravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_check_circle_24"
                tools:tint="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>